[package]
name = "chronik-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "chronik-operator"
path = "src/main.rs"

[dependencies]
chronik-common = { path = "../chronik-common" }

# Kubernetes
kube = { workspace = true }
k8s-openapi = { workspace = true }
schemars = "0.8"

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"