[package]
name = "chronik-perf"
version = "0.1.0"
edition = "2021"
authors = ["Chronik Team"]
description = "HTTP ingestor and consumer for Chronik K8s performance testing"
license = "Apache-2.0"

[[bin]]
name = "chronik-perf"
path = "src/main.rs"

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
rdkafka = { version = "0.36", features = ["cmake-build", "ssl", "gssapi", "libz"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"
rand = "0.8"
