[package]
name = "chronik-query"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
chronik-common = { path = "../chronik-common" }
chronik-storage = { path = "../chronik-storage" }

# Async runtime
tokio = { workspace = true, features = ["fs", "sync", "time"] }
tokio-stream = { workspace = true }

# Async traits
async-trait = { workspace = true }

# API framework
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
bytes = { workspace = true }

# Search
tantivy = { workspace = true }

# Utils
uuid = { workspace = true }
chrono = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing & Metrics
tracing = { workspace = true }
prometheus = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
tokio-test = "0.4"
tempfile = { workspace = true }