[package]
name = "chronik-raft-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# CRITICAL: This crate ONLY depends on raft (prost 0.11), NOT prost 0.13
# This ensures we only see prost 0.11's Message trait
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
bytes = { workspace = true }
prost = "0.11"  # Explicitly use 0.11 to match raft
