[package]
name = "chronik-raft-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Uses vendored raft crate with prost 0.12 (via workspace [patch] section)
raft = { version = "0.7", default-features = false, features = ["prost-codec"] }
bytes = { workspace = true }
prost = { workspace = true }  # Use workspace prost 0.12
