[package]
name = "chronik-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "search-server"
path = "src/bin/search-server.rs"

[dependencies]
chronik-common = { path = "../chronik-common" }
chronik-storage = { path = "../chronik-storage" }
chronik-protocol = { path = "../chronik-protocol" }

# Web framework
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Search
tantivy = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
base64 = "0.21"
bincode = "1.3"

# Async
tokio = { workspace = true }
futures = { workspace = true }

# Collections
dashmap = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Tracing & Metrics
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
prometheus = { workspace = true }

# Time
chrono = { workspace = true }

# Memory
bytes = "1.5"

# Other
uuid = { workspace = true }
sha2 = "0.10"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio-test = "0.4"
tempfile = "3.8"
axum-test = "14.0"
criterion = { workspace = true }

[[bench]]
name = "realtime_indexing_bench"
harness = false
path = "../../benches/realtime_indexing_bench.rs"