[package]
name = "chronik-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified Chronik Stream server - Kafka-compatible streaming platform"

[[bin]]
name = "chronik-server"
path = "src/main.rs"

[dependencies]
# Core Chronik dependencies
chronik-common = { path = "../chronik-common" }
chronik-protocol = { path = "../chronik-protocol" }
chronik-storage = { path = "../chronik-storage" }
chronik-wal = { path = "../chronik-wal" }
# chronik-ingest removed - code moved directly into chronik-server
chronik-monitoring = { path = "../chronik-monitoring" }
chronik-auth = { path = "../chronik-auth" }
chronik-config = { path = "../chronik-config" }  # Required for cluster configuration

# Optional components (feature-gated)
chronik-search = { path = "../chronik-search", optional = true }
chronik-query = { path = "../chronik-query", optional = true }
chronik-backup = { path = "../chronik-backup", optional = true }

# Raft consensus (v2.5.0 - metadata coordination only, NOT data replication)
raft = { version = "0.7", optional = true }
raft-proto = { version = "0.7", optional = true }
prost = { version = "0.12", optional = true }

# Core dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"  # For YAML output in CLI
bincode = { workspace = true }
byteorder = { workspace = true }
base64 = "0.22"
toml = "0.8"  # For cluster config parsing

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
murmur2 = { workspace = true }
crossbeam = "0.8"  # Lock-free queues for WAL replication
crc32fast = "1.4"  # CRC32 checksums for WAL replication frames

# Socket configuration
socket2 = "0.5"

# Force vendored OpenSSL for musl builds
openssl = { workspace = true }

# CLI table formatting
tabled = "0.15"

# Metrics handled by chronik-monitoring dependency


[features]
default = ["search", "backup"]
search = ["dep:chronik-search", "dep:chronik-query"]
backup = ["dep:chronik-backup"]
raft = ["dep:raft", "dep:raft-proto", "dep:prost"]  # v2.5.0: Metadata coordination (NOT data replication)
full = ["search", "backup", "raft"]

# Minimal build without optional features
minimal = []

[lints]
workspace = true
