[package]
name = "chronik-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Unified Chronik Stream server - Kafka-compatible streaming platform"

[[bin]]
name = "chronik-server"
path = "src/main.rs"

[dependencies]
# Core Chronik dependencies
chronik-common = { path = "../chronik-common" }
chronik-protocol = { path = "../chronik-protocol" }
chronik-storage = { path = "../chronik-storage" }
chronik-wal = { path = "../chronik-wal" }
# chronik-ingest removed - code moved directly into chronik-server
chronik-monitoring = { path = "../chronik-monitoring" }
chronik-config = { path = "../chronik-config" }  # Required for cluster configuration

# v2.2.22: Columnar storage and embeddings for Unified API
chronik-columnar = { path = "../chronik-columnar" }
chronik-embeddings = { path = "../chronik-embeddings" }

# Query orchestration (Phase 9)
chronik-query = { path = "../chronik-query" }

# Optional components (feature-gated)
chronik-search = { path = "../chronik-search", optional = true }
chronik-backup = { path = "../chronik-backup", optional = true }
tantivy = { workspace = true, optional = true }  # Used by query_handler for text search

# Raft consensus (v2.2.7 - metadata coordination only, NOT data replication)
chronik-raft = { path = "../chronik-raft" }
raft = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
slog = { workspace = true }
slog-stdlog = { workspace = true }

# HTTP admin API (v2.2.7 - cluster management)
axum = { workspace = true }
hyper = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
reqwest = { workspace = true }

# Core dependencies
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# CLI
clap = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"  # For YAML output in CLI
bincode = { workspace = true }
byteorder = { workspace = true }
base64 = "0.22"
toml = "0.8"  # For cluster config parsing

# Utils
uuid = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
parking_lot = { workspace = true }
murmur2 = { workspace = true }
crossbeam = "0.8"  # Lock-free queues for WAL replication
crc32fast = "1.4"  # CRC32 checksums for WAL replication frames
arc-swap = "1.7"  # Lock-free atomic pointer swapping for metadata state machine (v2.2.7 deadlock fix)

# Socket configuration
socket2 = "0.5"

# TLS for Kafka Protocol
tokio-rustls = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }

# Force vendored OpenSSL for musl builds
openssl = { workspace = true }

# CLI table formatting
tabled = "0.15"

# Metrics handled by chronik-monitoring dependency


[features]
default = ["search", "backup"]
search = ["dep:chronik-search", "dep:tantivy"]
backup = ["dep:chronik-backup"]
full = ["search", "backup"]

# Minimal build without optional features (Raft is always included)
minimal = []

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
